# RaddiOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  start_emu.sh
bootloader/: CMakeLists.txt  Makefile  README.md  bootloader.asm  io.asm  start_emu.sh
